--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2915486344926016"
-     crossorigin="anonymous"></script>
+   <meta name="monetag" content="055904e4b07df8dcb8d0bbc6596b811e">
     <!-- Google tag (gtag.js) -->
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-03MNDERJ9H"></script>
