--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             <p>हिंदी</p>
         </div>
         <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8896632,document.createElement('script'))</script>
+       <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="129460" async data-cfasync="false"></script>
    <a href="privacy.html" class="button">Privacy Policy</a>
   <a href="About.html" class="button">About Us</a>
  <a href="Terms.html" class="button">terms and conditions</a>
