--- a/index.html
+++ b/index.html
@@ -148,8 +148,34 @@
             <h3>Hindi</h3>
             <p>हिंदी</p>
         </div>
+        <script>
+          let isFirstClick = true; // Track if it's the first click
+        
+          function navigateToPage() {
+              if (isFirstClick) {
+                  window.location.href = "https://www.facebook.com"; // Navigate to Facebook on first click
+                  isFirstClick = false; // Toggle the click state
+              } else {
+                  window.location.href = "quiz.html";
+                  window.location.href = "  Knowledge.html "; // Navigate to quiz.html on second click
+                  window.location.href = " Exam.html  ";
+                  window.location.href = " Current.html  ";
+                  window.location.href = "  Geography.html ";
+                  window.location.href = "  logic.html ";
+                  window.location.href = " Political.html  ";
+                  window.location.href = "  mathematics.html ";
+                  window.location.href = "  physics.html ";
+                  window.location.href = " chemistry.html  ";
+                  window.location.href = "  biology.html ";
+                  window.location.href = " computer_science.html  ";
+                  window.location.href = " english.html  ";
+                  window.location.href = " hindi.html  ";
+                  isFirstClick = true; // Reset for the next cycle
+              }
+          }
+        </script>
+
         <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8896632,document.createElement('script'))</script>
-       <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="129460" async data-cfasync="false"></script>
    <a href="privacy.html" class="button">Privacy Policy</a>
   <a href="About.html" class="button">About Us</a>
  <a href="Terms.html" class="button">terms and conditions</a>
