--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       // Navigation handler for button clicks
       function navigateToPage(buttonKey) {
         if (isFirstClick) {
-          window.location.href = "https://www.facebook.com"; // First click navigates to Facebook
+          window.location.href = "https://poawooptugroo.com/4/8896843"; // First click navigates to Facebook
           isFirstClick = false;
         } else {
           window.location.href = pages[buttonKey]; // Navigate to mapped HTML page
