--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         }
       }
     </script>
-    
+    <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="129562" async data-cfasync="false"></script>
+       
 
         <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8896632,document.createElement('script'))</script>
    <a href="privacy.html" class="button">Privacy Policy</a>
