--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
    <meta name="monetag" content="055904e4b07df8dcb8d0bbc6596b811e">
+
+   google-site-verification=gqYtkJObVBibR3uJ89wOdZbV-ZMUjM8ZDUP3o9zapl4
+   
     <!-- Google tag (gtag.js) -->
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-03MNDERJ9H"></script>
