--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
    <meta name="monetag" content="055904e4b07df8dcb8d0bbc6596b811e">
 
-   
-    <!-- Google tag (gtag.js) -->
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-03MNDERJ9H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-03MNDERJ9H');
-</script>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3718284551002996"
+     crossorigin="anonymous"></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provide Mind</title>
