--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   //monetag monatize 👇
    <meta name="monetag" content="055904e4b07df8dcb8d0bbc6596b811e">
-
+   //Google Adsense 👇
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3718284551002996"
      crossorigin="anonymous"></script>
-    
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provide Mind</title>
