--- a/chemistry.html
+++ b/chemistry.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2079053777833226"
+     crossorigin="anonymous"></script>
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>रसायन विज्ञान के प्रमुख टॉपिक्स</title>
